Added new sign-in endpoint. Added generation of a JWT token, which is the result of executing this endpoint. Swagger annotations have been updated.
